--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5">OMG! You will not believe me but...</h1>
       <h1 id="the-excuse">My dog ate my homework</h1>
+      <button id="btn">Generate an excuse</button>
     </div>
   </body>
 </html>
